--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <main>
-      <section class="filter-wrapper">
+      <section class="filter-wrapper hide">
         <div class="filter__tags"></div>
         <div class="filter__clear">
           <button class="btn clearBtn">Clear</button>
